Spruced and styled up the display and also added width to the calculator to prevent it from being too wide.

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 .calculator_full {
     background-color: black;
     height: 450px;
+    width: 300px;
     border-radius: 9px;
     padding: 35px 25px;
 }
@@ -10,7 +11,11 @@
     height: 105px;
     border-radius: 7px;
     margin-bottom: 10px;
-    transition: box-shadow 0.15s;  
+    transition: box-shadow 0.15s; 
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+    font-size: 65px; 
+    padding: 10px 15px;
 }
 
 .display:hover {
